# variants

./: .gitignore  pyproject.toml  todo.txt
src/variants/: __init__.py  array_iterator.py  arrays_chunk.py  distances.py  filter.py  globals.py  io.py  ion.py  iterators.py  pop_stats.py  regions.py  variants.py  vars_io.py
tests/: test_array.py  test_dists.py  test_filter_vars.py  test_io.py  test_itertools.py  test_pop_stats.py  test_utils.py
