[project]
name = "variants"
version = '0.0.1'

dependencies = [
    "more-itertools",
    "scikit-allel",
    "pandas",
    "numpy",
    "pyarrow",
    "scipy",
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

